--- a/styles.css
+++ b/styles.css
@@ -154,6 +154,23 @@ h3 {
 .trash .task-list::before {
     background-color: #f18383; /* Соответствует цвету заголовка Trash */
 }  
+.drag-and-drop {
+    padding: 10px;
+    margin: 10px 0;
+    border-radius: 8px;
+    width: 100%; 
+    height: 50px; 
+    align-items: center;
+    justify-content: left;
+    text-align: left;
+    box-sizing: border-box;
+    font-size: 13px;
+    background-color: transparent;
+    color: grey;
+    list-style-type: none;
+    border-style: groove;
+    border-width: 2px;
+  }
 .clear-button {
 
     width: 100%;
