--- a/styles.css
+++ b/styles.css
@@ -67,10 +67,6 @@ h3 {
     background-color: #2563eb;
 }
 
-.new-task button:hover {
-    background-color: #2563eb;
-}
-
 .columns {
     display: flex;
     justify-content: space-between;
@@ -185,3 +181,19 @@ h3 {
 .clear-button:hover {
     background-color: #a11515;
 }
+
+.task-element {
+    background-color: #f4f4f9;
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 4px;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  }
+  
+.drag-and-drop {
+    background-color: transparent;
+    color: grey;
+    list-style-type: none;
+    border-style: groove;
+    border-width: 2px;
+  }
